# hazard

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
assets/shaders/: cube.frag  cube.vert  cube2.frag  textured.frag  textured.vert
include/: glm2json.h
scenes/: sample.scene  sample_scene.json
src/: Config.h  config.cpp  config.h  main.cpp
src/engine/: Camera.cpp  Camera.h  RenderStats.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h
src/engine/scene_objects/: BaseObject.cpp  BaseObject.h  Cube.cpp  Cube.h  Drawable.cpp  Drawable.h  DrawableObject.h  ISceneObject.h  LightSource.cpp  LightSource.h  Plane.cpp  Plane.h  ShaderProgram.cpp  ShaderProgram.h  ShaderSourceFile.cpp  ShaderSourceFile.h  TSceneObject.h  Texture.cpp  Texture.h
src/engine/scene_objects/drawables/: Cube.h  IDrawable.h  Plane.h
src/ui/: UI.cpp  UI.h  fields.h  properties.h
tools/: bootstrap.bat  install.bat
